campaign system work + setcapital changes